m6-infra/policies/constraints/allowed-repos.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: allowed-repos
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaces: ["lens-demo"]
  parameters:
    repos:
      - "lens/"
      - "ghcr.io/"
      - "stain/jena-fuseki"
